# data_needs_reporter

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  config.yaml  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
datagap_report/: cli.py  gap_miner.py  llm.py  normalize.py  report.py  schemas.py  score.py
datagap_synth/: catalog.py  cli.py  config.py  gen_email.py  gen_nlq.py  gen_slack.py  generator.py  listing.py  util.py  validate.py
datagap_synth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datagap_synth/scenarios/: __init__.py  enterprise.yaml
datagap_synth/schemas/: email.schema.json
dnr_synth/: __init__.py  cli.py  config.py  utils.py
dnr_synth/analysis/: gaps_prompt.py
dnr_synth/corruptors/: __init__.py  duplicates.py  keys.py  lateness.py  null_spikes.py  schema_drift.py
dnr_synth/domains/: __init__.py  base.py  ecom.py  fintech.py  saas.py
dnr_synth/eval/: __init__.py  metrics.py  report.py
dnr_synth/sample/: __init__.py  context.py  nlg_queries.py  provider.py  slack.py  utils.py  validate.py
report_out/: backlog.csv  freshness_table.csv  hotspots.dot  report.html  report.md
schemas/: nl_query.schema.json  slack.schema.json
tests/: test_cli_clean.py  test_cli_init.py  test_config_validators.py  test_corruptors.py  test_domains.py  test_duplicates_behavior.py  test_gap_miner.py  test_gaps_report_cli.py  test_gaps_report_sidecar.py  test_gaps_text_cli.py  test_health_report.py  test_metrics.py  test_normalize_and_score.py  test_preview_command.py  test_sample_pipeline.py  test_split_outputs.py
(+82 files in other folders)
