[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datagap_synth"
version = "0.1.0"
description = "Synthetic telemetry pack generator for data-gap tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.18",
  "httpx>=0.25",
]
authors = [{name = "Datagap Synth", email = "noreply@example.com"}]
license = {text = "MIT"}

[project.scripts]
datagap-synth = "datagap_synth.cli:main"
datagap-report = "datagap_report.cli:main"

[tool.setuptools]
packages = ["datagap_synth", "datagap_report"]
include-package-data = true

[tool.setuptools.package-data]
datagap_synth = [
  "schemas/*.json"
]
