[tool.poetry]
name = "dnr-synth"
version = "0.1.0"
description = "Synthetic data generator and evaluator for Data Needs Reporter demos"
authors = ["Data Needs Reporter <noreply@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "dnr_synth*" }
]

[[tool.poetry.include]]
path = "templates"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
click = "8.1.7"
numpy = "^1.26"
pandas = "^2.1"
pyarrow = "^16.1"
faker = "^19.0"
"ruamel.yaml" = "^0.17.32"
pydantic = "^2.4"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
dnr-synth = "dnr_synth.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
